# mini-grep

./: .gitignore  CMakeLists.txt  LICENSE  README.md  justfile
.github/workflows/: cmake-single-platform.yml
apps/: CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt  end_to_end_benchmark.cpp  my_micro_benchmark.cpp
cmake/: LibrarySetUp.cmake
include/: log.h
include/mini-grep/: lib.h
include/mpmc/: queue.h
include/queue/: queue.h
include/ringbuffer/: ringbuffer.h
include/search/: executor.h  input.h  lib.h  matcher.h  policies.h
src/: CMakeLists.txt  lib.cpp  matcher.cpp
test/: CMakeLists.txt  test_engine.cpp  test_executor.cpp  test_mini-grep.cpp  test_policies.cpp  test_queue.cpp  test_ringbuffer.cpp  test_search.cpp
utils/: gen_data.py
